# chromatic

./: Cargo.toml  README.md  meson.build  run.sh
data/: io.github.nate_xyz.Chromatic.appdata.xml.in  io.github.nate_xyz.Chromatic.desktop.in  io.github.nate_xyz.Chromatic.gschema.xml  meson.build
data/icons/: meson.build
flatpak/: cargo-sources.json  io.github.nate_xyz.Chromatic.json
po/: LINGUAS  POTFILES  chromatic.pot  de.po  es.po  fr.po  it.po  meson.build  pt_br.po  tr.po
src/: application.rs  chromatic.gresource.xml  gauge.rs  main.rs  meson.build  preferences_window.rs  recorder.rs  style.css  toasts.rs  util.rs  window.rs
src/ui/: preferences_window.ui  window.ui
