[package]
name = "chromatic"
version = "0.1.0"
edition = "2021"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk = { version = "0.5", package = "gtk4" }
log = "0.4"
pretty_env_logger = "0.4"
regex = "1.7.1"
fuzzy-matcher = "0.3.7"
once_cell = "1.10"
pulsectl-rs = "0.3.2"
portaudio = "0.7.0"
aubio = { version = "0.2.0", package = "aubio-rs" }
pitch_calc = "0.12.0"

[dependencies.adw]
package = "libadwaita"
version = "0.2"
features = ["v1_2"]